lang.output
Rules never reduced

   26 expression: identifier ASSIGN identifier PLUS set_literal


State 99 conflicts: 15 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: declarations statements

    2 declarations: /* empty */
    3             | declarations declaration

    4 declaration: INT identifiers SEMICOLON
    5            | STR identifiers SEMICOLON
    6            | SET identifiers SEMICOLON
    7            | COLLECTION identifiers SEMICOLON

    8 identifiers: identifier
    9            | identifiers COMMA identifier

   10 identifier: IDENTIFIER

   11 statements: /* empty */
   12           | statements statement

   13 statement: expression SEMICOLON
   14          | INPUT STRING_LITERAL identifier SEMICOLON
   15          | OUTPUT STRING_LITERAL expression SEMICOLON
   16          | IF condition LBRACE statements RBRACE
   17          | IF condition LBRACE statements RBRACE ELSE LBRACE statements RBRACE
   18          | WHILE condition LBRACE statements RBRACE
   19          | FOR identifier COLON identifier LBRACE statements RBRACE

   20 expression: NUMBER
   21           | STRING_LITERAL
   22           | set_literal
   23           | col_literal
   24           | identifier ASSIGN expression
   25           | identifier PLUS set_literal
   26           | identifier ASSIGN identifier PLUS set_literal
   27           | expression PLUS expression
   28           | expression MINUS expression
   29           | expression MUL expression
   30           | expression DIV expression
   31           | expression INTERSECT expression
   32           | expression UNION expression
   33           | LPAREN expression RPAREN

   34 condition: expression EQ expression
   35          | expression NEQ expression
   36          | expression LT expression
   37          | expression LE expression
   38          | expression GT expression
   39          | expression GE expression

   40 set_literal: LBRACE number_list RBRACE

   41 number_list: NUMBER
   42            | number_list COMMA NUMBER

   43 col_literal: LBRACE string_list RBRACE

   44 string_list: STRING_LITERAL
   45            | string_list COMMA STRING_LITERAL


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 20 41 42
STRING_LITERAL (259) 14 15 21 44 45
IDENTIFIER (260) 10
INT (261) 4
STR (262) 5
SET (263) 6
COLLECTION (264) 7
INPUT (265) 14
OUTPUT (266) 15
IF (267) 16 17
ELSE (268) 17
WHILE (269) 18
FOR (270) 19
EQ (271) 34
NEQ (272) 35
LE (273) 37
GE (274) 39
LT (275) 36
GT (276) 38
ASSIGN (277) 24 26
PLUS (278) 25 26 27
MINUS (279) 28
MUL (280) 29
DIV (281) 30
INTERSECT (282) 31
UNION (283) 32
LPAREN (284) 33
RPAREN (285) 33
LBRACE (286) 16 17 18 19 40 43
RBRACE (287) 16 17 18 19 40 43
SEMICOLON (288) 4 5 6 7 13 14 15
COMMA (289) 9 42 45
COLON (290) 19


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
declarations (38)
    on left: 2 3, on right: 1 3
declaration (39)
    on left: 4 5 6 7, on right: 3
identifiers (40)
    on left: 8 9, on right: 4 5 6 7 9
identifier (41)
    on left: 10, on right: 8 9 14 19 24 25 26
statements (42)
    on left: 11 12, on right: 1 12 16 17 18 19
statement (43)
    on left: 13 14 15 16 17 18 19, on right: 12
expression (44)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33,
    on right: 13 15 24 27 28 29 30 31 32 33 34 35 36 37 38 39
condition (45)
    on left: 34 35 36 37 38 39, on right: 16 17 18
set_literal (46)
    on left: 40, on right: 22 25 26
number_list (47)
    on left: 41 42, on right: 40 42
col_literal (48)
    on left: 43, on right: 23
string_list (49)
    on left: 44 45, on right: 43 45


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (declarations)

    program       go to state 1
    declarations  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: declarations . statements
    3 declarations: declarations . declaration

    INT         shift, and go to state 4
    STR         shift, and go to state 5
    SET         shift, and go to state 6
    COLLECTION  shift, and go to state 7

    $default  reduce using rule 11 (statements)

    declaration  go to state 8
    statements   go to state 9


state 3

    0 $accept: program $end .

    $default  accept


state 4

    4 declaration: INT . identifiers SEMICOLON

    IDENTIFIER  shift, and go to state 10

    identifiers  go to state 11
    identifier   go to state 12


state 5

    5 declaration: STR . identifiers SEMICOLON

    IDENTIFIER  shift, and go to state 10

    identifiers  go to state 13
    identifier   go to state 12


state 6

    6 declaration: SET . identifiers SEMICOLON

    IDENTIFIER  shift, and go to state 10

    identifiers  go to state 14
    identifier   go to state 12


state 7

    7 declaration: COLLECTION . identifiers SEMICOLON

    IDENTIFIER  shift, and go to state 10

    identifiers  go to state 15
    identifier   go to state 12


state 8

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


state 9

    1 program: declarations statements .
   12 statements: statements . statement

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    INPUT           shift, and go to state 18
    OUTPUT          shift, and go to state 19
    IF              shift, and go to state 20
    WHILE           shift, and go to state 21
    FOR             shift, and go to state 22
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    $default  reduce using rule 1 (program)

    identifier   go to state 25
    statement    go to state 26
    expression   go to state 27
    set_literal  go to state 28
    col_literal  go to state 29


state 10

   10 identifier: IDENTIFIER .

    $default  reduce using rule 10 (identifier)


state 11

    4 declaration: INT identifiers . SEMICOLON
    9 identifiers: identifiers . COMMA identifier

    SEMICOLON  shift, and go to state 30
    COMMA      shift, and go to state 31


state 12

    8 identifiers: identifier .

    $default  reduce using rule 8 (identifiers)


state 13

    5 declaration: STR identifiers . SEMICOLON
    9 identifiers: identifiers . COMMA identifier

    SEMICOLON  shift, and go to state 32
    COMMA      shift, and go to state 31


state 14

    6 declaration: SET identifiers . SEMICOLON
    9 identifiers: identifiers . COMMA identifier

    SEMICOLON  shift, and go to state 33
    COMMA      shift, and go to state 31


state 15

    7 declaration: COLLECTION identifiers . SEMICOLON
    9 identifiers: identifiers . COMMA identifier

    SEMICOLON  shift, and go to state 34
    COMMA      shift, and go to state 31


state 16

   20 expression: NUMBER .

    $default  reduce using rule 20 (expression)


state 17

   21 expression: STRING_LITERAL .

    $default  reduce using rule 21 (expression)


state 18

   14 statement: INPUT . STRING_LITERAL identifier SEMICOLON

    STRING_LITERAL  shift, and go to state 35


state 19

   15 statement: OUTPUT . STRING_LITERAL expression SEMICOLON

    STRING_LITERAL  shift, and go to state 36


state 20

   16 statement: IF . condition LBRACE statements RBRACE
   17          | IF . condition LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 37
    condition    go to state 38
    set_literal  go to state 28
    col_literal  go to state 29


state 21

   18 statement: WHILE . condition LBRACE statements RBRACE

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 37
    condition    go to state 39
    set_literal  go to state 28
    col_literal  go to state 29


state 22

   19 statement: FOR . identifier COLON identifier LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 10

    identifier  go to state 40


state 23

   33 expression: LPAREN . expression RPAREN

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 41
    set_literal  go to state 28
    col_literal  go to state 29


state 24

   40 set_literal: LBRACE . number_list RBRACE
   43 col_literal: LBRACE . string_list RBRACE

    NUMBER          shift, and go to state 42
    STRING_LITERAL  shift, and go to state 43

    number_list  go to state 44
    string_list  go to state 45


state 25

   24 expression: identifier . ASSIGN expression
   25           | identifier . PLUS set_literal
   26           | identifier . ASSIGN identifier PLUS set_literal

    ASSIGN  shift, and go to state 46
    PLUS    shift, and go to state 47


state 26

   12 statements: statements statement .

    $default  reduce using rule 12 (statements)


state 27

   13 statement: expression . SEMICOLON
   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53
    SEMICOLON  shift, and go to state 54


state 28

   22 expression: set_literal .

    $default  reduce using rule 22 (expression)


state 29

   23 expression: col_literal .

    $default  reduce using rule 23 (expression)


state 30

    4 declaration: INT identifiers SEMICOLON .

    $default  reduce using rule 4 (declaration)


state 31

    9 identifiers: identifiers COMMA . identifier

    IDENTIFIER  shift, and go to state 10

    identifier  go to state 55


state 32

    5 declaration: STR identifiers SEMICOLON .

    $default  reduce using rule 5 (declaration)


state 33

    6 declaration: SET identifiers SEMICOLON .

    $default  reduce using rule 6 (declaration)


state 34

    7 declaration: COLLECTION identifiers SEMICOLON .

    $default  reduce using rule 7 (declaration)


state 35

   14 statement: INPUT STRING_LITERAL . identifier SEMICOLON

    IDENTIFIER  shift, and go to state 10

    identifier  go to state 56


state 36

   15 statement: OUTPUT STRING_LITERAL . expression SEMICOLON

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 57
    set_literal  go to state 28
    col_literal  go to state 29


state 37

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   34 condition: expression . EQ expression
   35          | expression . NEQ expression
   36          | expression . LT expression
   37          | expression . LE expression
   38          | expression . GT expression
   39          | expression . GE expression

    EQ         shift, and go to state 58
    NEQ        shift, and go to state 59
    LE         shift, and go to state 60
    GE         shift, and go to state 61
    LT         shift, and go to state 62
    GT         shift, and go to state 63
    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53


state 38

   16 statement: IF condition . LBRACE statements RBRACE
   17          | IF condition . LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LBRACE  shift, and go to state 64


state 39

   18 statement: WHILE condition . LBRACE statements RBRACE

    LBRACE  shift, and go to state 65


state 40

   19 statement: FOR identifier . COLON identifier LBRACE statements RBRACE

    COLON  shift, and go to state 66


state 41

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   33           | LPAREN expression . RPAREN

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53
    RPAREN     shift, and go to state 67


state 42

   41 number_list: NUMBER .

    $default  reduce using rule 41 (number_list)


state 43

   44 string_list: STRING_LITERAL .

    $default  reduce using rule 44 (string_list)


state 44

   40 set_literal: LBRACE number_list . RBRACE
   42 number_list: number_list . COMMA NUMBER

    RBRACE  shift, and go to state 68
    COMMA   shift, and go to state 69


state 45

   43 col_literal: LBRACE string_list . RBRACE
   45 string_list: string_list . COMMA STRING_LITERAL

    RBRACE  shift, and go to state 70
    COMMA   shift, and go to state 71


state 46

   24 expression: identifier ASSIGN . expression
   26           | identifier ASSIGN . identifier PLUS set_literal

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 72
    expression   go to state 73
    set_literal  go to state 28
    col_literal  go to state 29


state 47

   25 expression: identifier PLUS . set_literal

    LBRACE  shift, and go to state 74

    set_literal  go to state 75


state 48

   27 expression: expression PLUS . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 76
    set_literal  go to state 28
    col_literal  go to state 29


state 49

   28 expression: expression MINUS . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 77
    set_literal  go to state 28
    col_literal  go to state 29


state 50

   29 expression: expression MUL . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 78
    set_literal  go to state 28
    col_literal  go to state 29


state 51

   30 expression: expression DIV . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 79
    set_literal  go to state 28
    col_literal  go to state 29


state 52

   31 expression: expression INTERSECT . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 80
    set_literal  go to state 28
    col_literal  go to state 29


state 53

   32 expression: expression UNION . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 81
    set_literal  go to state 28
    col_literal  go to state 29


state 54

   13 statement: expression SEMICOLON .

    $default  reduce using rule 13 (statement)


state 55

    9 identifiers: identifiers COMMA identifier .

    $default  reduce using rule 9 (identifiers)


state 56

   14 statement: INPUT STRING_LITERAL identifier . SEMICOLON

    SEMICOLON  shift, and go to state 82


state 57

   15 statement: OUTPUT STRING_LITERAL expression . SEMICOLON
   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53
    SEMICOLON  shift, and go to state 83


state 58

   34 condition: expression EQ . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 84
    set_literal  go to state 28
    col_literal  go to state 29


state 59

   35 condition: expression NEQ . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 85
    set_literal  go to state 28
    col_literal  go to state 29


state 60

   37 condition: expression LE . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 86
    set_literal  go to state 28
    col_literal  go to state 29


state 61

   39 condition: expression GE . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 87
    set_literal  go to state 28
    col_literal  go to state 29


state 62

   36 condition: expression LT . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 88
    set_literal  go to state 28
    col_literal  go to state 29


state 63

   38 condition: expression GT . expression

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24

    identifier   go to state 25
    expression   go to state 89
    set_literal  go to state 28
    col_literal  go to state 29


state 64

   16 statement: IF condition LBRACE . statements RBRACE
   17          | IF condition LBRACE . statements RBRACE ELSE LBRACE statements RBRACE

    $default  reduce using rule 11 (statements)

    statements  go to state 90


state 65

   18 statement: WHILE condition LBRACE . statements RBRACE

    $default  reduce using rule 11 (statements)

    statements  go to state 91


state 66

   19 statement: FOR identifier COLON . identifier LBRACE statements RBRACE

    IDENTIFIER  shift, and go to state 10

    identifier  go to state 92


state 67

   33 expression: LPAREN expression RPAREN .

    $default  reduce using rule 33 (expression)


state 68

   40 set_literal: LBRACE number_list RBRACE .

    $default  reduce using rule 40 (set_literal)


state 69

   42 number_list: number_list COMMA . NUMBER

    NUMBER  shift, and go to state 93


state 70

   43 col_literal: LBRACE string_list RBRACE .

    $default  reduce using rule 43 (col_literal)


state 71

   45 string_list: string_list COMMA . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 94


state 72

   24 expression: identifier . ASSIGN expression
   25           | identifier . PLUS set_literal
   26           | identifier . ASSIGN identifier PLUS set_literal
   26           | identifier ASSIGN identifier . PLUS set_literal

    ASSIGN  shift, and go to state 46
    PLUS    shift, and go to state 95


state 73

   24 expression: identifier ASSIGN expression .
   27           | expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 24 (expression)


state 74

   40 set_literal: LBRACE . number_list RBRACE

    NUMBER  shift, and go to state 42

    number_list  go to state 44


state 75

   25 expression: identifier PLUS set_literal .

    $default  reduce using rule 25 (expression)


state 76

   27 expression: expression . PLUS expression
   27           | expression PLUS expression .
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 27 (expression)


state 77

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   28           | expression MINUS expression .
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 28 (expression)


state 78

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   29           | expression MUL expression .
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 29 (expression)


state 79

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   30           | expression DIV expression .
   31           | expression . INTERSECT expression
   32           | expression . UNION expression

    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 30 (expression)


state 80

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   31           | expression INTERSECT expression .
   32           | expression . UNION expression

    $default  reduce using rule 31 (expression)


state 81

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   32           | expression UNION expression .

    $default  reduce using rule 32 (expression)


state 82

   14 statement: INPUT STRING_LITERAL identifier SEMICOLON .

    $default  reduce using rule 14 (statement)


state 83

   15 statement: OUTPUT STRING_LITERAL expression SEMICOLON .

    $default  reduce using rule 15 (statement)


state 84

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   34 condition: expression EQ expression .

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 34 (condition)


state 85

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   35 condition: expression NEQ expression .

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 35 (condition)


state 86

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   37 condition: expression LE expression .

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 37 (condition)


state 87

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   39 condition: expression GE expression .

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 39 (condition)


state 88

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   36 condition: expression LT expression .

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 36 (condition)


state 89

   27 expression: expression . PLUS expression
   28           | expression . MINUS expression
   29           | expression . MUL expression
   30           | expression . DIV expression
   31           | expression . INTERSECT expression
   32           | expression . UNION expression
   38 condition: expression GT expression .

    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    MUL        shift, and go to state 50
    DIV        shift, and go to state 51
    INTERSECT  shift, and go to state 52
    UNION      shift, and go to state 53

    $default  reduce using rule 38 (condition)


state 90

   12 statements: statements . statement
   16 statement: IF condition LBRACE statements . RBRACE
   17          | IF condition LBRACE statements . RBRACE ELSE LBRACE statements RBRACE

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    INPUT           shift, and go to state 18
    OUTPUT          shift, and go to state 19
    IF              shift, and go to state 20
    WHILE           shift, and go to state 21
    FOR             shift, and go to state 22
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24
    RBRACE          shift, and go to state 96

    identifier   go to state 25
    statement    go to state 26
    expression   go to state 27
    set_literal  go to state 28
    col_literal  go to state 29


state 91

   12 statements: statements . statement
   18 statement: WHILE condition LBRACE statements . RBRACE

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    INPUT           shift, and go to state 18
    OUTPUT          shift, and go to state 19
    IF              shift, and go to state 20
    WHILE           shift, and go to state 21
    FOR             shift, and go to state 22
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24
    RBRACE          shift, and go to state 97

    identifier   go to state 25
    statement    go to state 26
    expression   go to state 27
    set_literal  go to state 28
    col_literal  go to state 29


state 92

   19 statement: FOR identifier COLON identifier . LBRACE statements RBRACE

    LBRACE  shift, and go to state 98


state 93

   42 number_list: number_list COMMA NUMBER .

    $default  reduce using rule 42 (number_list)


state 94

   45 string_list: string_list COMMA STRING_LITERAL .

    $default  reduce using rule 45 (string_list)


state 95

   25 expression: identifier PLUS . set_literal
   26           | identifier ASSIGN identifier PLUS . set_literal

    LBRACE  shift, and go to state 74

    set_literal  go to state 99


state 96

   16 statement: IF condition LBRACE statements RBRACE .
   17          | IF condition LBRACE statements RBRACE . ELSE LBRACE statements RBRACE

    ELSE  shift, and go to state 100

    $default  reduce using rule 16 (statement)


state 97

   18 statement: WHILE condition LBRACE statements RBRACE .

    $default  reduce using rule 18 (statement)


state 98

   19 statement: FOR identifier COLON identifier LBRACE . statements RBRACE

    $default  reduce using rule 11 (statements)

    statements  go to state 101


state 99

   25 expression: identifier PLUS set_literal .
   26           | identifier ASSIGN identifier PLUS set_literal .

    EQ         reduce using rule 25 (expression)
    EQ         [reduce using rule 26 (expression)]
    NEQ        reduce using rule 25 (expression)
    NEQ        [reduce using rule 26 (expression)]
    LE         reduce using rule 25 (expression)
    LE         [reduce using rule 26 (expression)]
    GE         reduce using rule 25 (expression)
    GE         [reduce using rule 26 (expression)]
    LT         reduce using rule 25 (expression)
    LT         [reduce using rule 26 (expression)]
    GT         reduce using rule 25 (expression)
    GT         [reduce using rule 26 (expression)]
    PLUS       reduce using rule 25 (expression)
    PLUS       [reduce using rule 26 (expression)]
    MINUS      reduce using rule 25 (expression)
    MINUS      [reduce using rule 26 (expression)]
    MUL        reduce using rule 25 (expression)
    MUL        [reduce using rule 26 (expression)]
    DIV        reduce using rule 25 (expression)
    DIV        [reduce using rule 26 (expression)]
    INTERSECT  reduce using rule 25 (expression)
    INTERSECT  [reduce using rule 26 (expression)]
    UNION      reduce using rule 25 (expression)
    UNION      [reduce using rule 26 (expression)]
    RPAREN     reduce using rule 25 (expression)
    RPAREN     [reduce using rule 26 (expression)]
    LBRACE     reduce using rule 25 (expression)
    LBRACE     [reduce using rule 26 (expression)]
    SEMICOLON  reduce using rule 25 (expression)
    SEMICOLON  [reduce using rule 26 (expression)]
    $default   reduce using rule 25 (expression)


state 100

   17 statement: IF condition LBRACE statements RBRACE ELSE . LBRACE statements RBRACE

    LBRACE  shift, and go to state 102


state 101

   12 statements: statements . statement
   19 statement: FOR identifier COLON identifier LBRACE statements . RBRACE

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    INPUT           shift, and go to state 18
    OUTPUT          shift, and go to state 19
    IF              shift, and go to state 20
    WHILE           shift, and go to state 21
    FOR             shift, and go to state 22
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24
    RBRACE          shift, and go to state 103

    identifier   go to state 25
    statement    go to state 26
    expression   go to state 27
    set_literal  go to state 28
    col_literal  go to state 29


state 102

   17 statement: IF condition LBRACE statements RBRACE ELSE LBRACE . statements RBRACE

    $default  reduce using rule 11 (statements)

    statements  go to state 104


state 103

   19 statement: FOR identifier COLON identifier LBRACE statements RBRACE .

    $default  reduce using rule 19 (statement)


state 104

   12 statements: statements . statement
   17 statement: IF condition LBRACE statements RBRACE ELSE LBRACE statements . RBRACE

    NUMBER          shift, and go to state 16
    STRING_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 10
    INPUT           shift, and go to state 18
    OUTPUT          shift, and go to state 19
    IF              shift, and go to state 20
    WHILE           shift, and go to state 21
    FOR             shift, and go to state 22
    LPAREN          shift, and go to state 23
    LBRACE          shift, and go to state 24
    RBRACE          shift, and go to state 105

    identifier   go to state 25
    statement    go to state 26
    expression   go to state 27
    set_literal  go to state 28
    col_literal  go to state 29


state 105

   17 statement: IF condition LBRACE statements RBRACE ELSE LBRACE statements RBRACE .

    $default  reduce using rule 17 (statement)
